# Currency-Recognition

CurrencyRecognition/src/: Makefile.am  configure.ac
CurrencyRecognition/src/CLI/: CLI.cpp  CLI.h  Makefile.am
CurrencyRecognition/src/GUI/: Makefile.am
CurrencyRecognition/src/ImageAnalysis/: ImageAnalysis.cpp  Makefile.am
CurrencyRecognition/src/libs/: Makefile.am
CurrencyRecognition/src/libs/Transformations/: Makefile.am
